# socialDistribution

./: README.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  compose.yml  pyproject.toml  requirements.txt  ruff.toml
backend/socialDistribution/: manage.py
backend/socialDistribution/project/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
backend/socialDistribution/project/migrations/: 0001_initial.py  0002_auto_20231017_2245.py  0003_delete_inbox.py  0004_auto_20231023_0239.py  0005_auto_20231023_0406.py  0006_auto_20231024_2143.py  0007_auto_20231027_0241.py  0008_auto_20231101_1531.py
backend/socialDistribution/project/templates/project/: author.html  create-post.html  post.html  profile.html  stream.html
backend/socialDistribution/project/tests/: test_follow_api.py  test_follow_request_api.py  test_follow_requests.py  test_views.py
backend/socialDistribution/socialDistribution/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: Feed.vue  FriendRequest.vue  Inbox.vue  Post.vue  PostCreateForm.vue  TaskBar.vue  UserProfile.vue
frontend/src/helpers/: fetch-wrapper.js
frontend/src/router/: index.js
frontend/src/stores/: auth.store.js
frontend/src/views/: HomeView.vue  LoginView.vue  PostCreateView.vue  ProfileView.vue  SignupView.vue  UserSearch.vue
